7523
This now reports:
```scala
scala> decl
<console>:11: error: macro has not been expanded
              decl
              ^
```
